clusters/az104-aks/awesome/apigateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-apigateway
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: apigateway.awesome.kubepia.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: awesome-apigateway
            port:
              number: 8080
